@@ -18,4 +18,8 @@ mkdir subdir
 
 $AUTOMAKE || exit 1
 
-grep '^DIST_COMMON =.*foo\.in' Makefile.in
+count=`fgrep foo.in Makefile.in | wc -l`
+test $count -eq 2 || exit 1
+
+# This ought to work as well.
+$AUTOMAKE --add-missing --force-missing
