@@ -1,5 +1,11 @@
 2001-06-17  Tom Tromey  <tromey@redhat.com>
 
+	* automake.in (require_file_internal): Check for already-required
+	file after searching for it, and only if it is not found.  Don't
+	use `readlink' when checking for dangling symlink.  Work if
+	--force-missing specified.
+	* tests/acoutput2.test: Also test --force-missing.
+
 	Fix for libtool.test:
 	* automake.in (generate_makefile): Call handle_libtool.
 	(handle_libtool): New sub.
